--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>MEGa</title>
     <link rel="shortcut icon" type="image/png" href="img/MEGa.svg">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
@@ -20,7 +20,7 @@
                      <li><a href="#"><i class="fas fa-graduation-cap"></i> Explore</a>
                         <div class="drop-down1">
                             <ul>
-                                <li><a href="#">Algebra</a></li>
+                                <li><a href="algebra.html">Algebra</a></li>
                                 <li><a href="#">Geometry</a></li>
                                 <li><a href="#">Trigonometry</a></li>
                                 <li><a href="#">Calculus</a></li>
