added 3 more pages and some svg's. Added formulas to the algebra page

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                         <div class="drop-down1">
                             <ul>
                                 <li><a href="algebra.html">Algebra</a></li>
-                                <li><a href="#">Geometry</a></li>
-                                <li><a href="#">Trigonometry</a></li>
-                                <li><a href="#">Calculus</a></li>
+                                <li><a href="geometry.html">Geometry</a></li>
+                                <li><a href="trigonometry.html">Trigonometry</a></li>
+                                <li><a href="calculus.html">Calculus</a></li>
                             </ul>
                         </div>
                     </li>
