--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
                      <li><a href="#"><i class="fas fa-graduation-cap"></i> Explore</a>
                         <div class="drop-down1">
                             <ul>
-                                <li><a href="#">Algebra</a></li>
+                                <li><a href="algebra.html">Algebra</a></li>
                                 <li><a href="#">Geometry</a></li>
                                 <li><a href="#">Trigonometry</a></li>
                                 <li><a href="#">Calculus</a></li>
