--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                  <ul>
                      <li class="active"><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                      <li><a href="#"><i class="fas fa-info"></i> About</a></li>
-                     <li><a href="#"><i class="fas fa-question"></i> Quiz</a></li>
+                     <li><a href="quiz.html"><i class="fas fa-question"></i> Quiz</a></li>
                      <li><a href="#"><i class="fas fa-graduation-cap"></i> Explore</a>
                         <div class="drop-down1">
                             <ul>
