--- a/html/quiz.html
+++ b/html/quiz.html
@@ -8,6 +8,8 @@
     <title>Quiz</title>
     <link rel="stylesheet" href="../css/quiz.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet"> 
     <script type="text/javascript"
         src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </head>
@@ -16,8 +18,29 @@
     <div class="navbar">
         <a href="index.html"><img class="home" src="../resources/svg/calculator.svg" alt="Home"></a>
     </div>
-    <div class="mega"></div>
-    
+
+
+    <div class="megaLogo">
+        <ul class="logo-main">
+            <li>
+                <img class="logo" src="../resources/svg/alphabet-serious-flat/svg/011-m.svg" onmouseover="this.src='../resources/svg/alphabet-flat/svg/014-m.svg';" onmouseout="this.src='../resources/svg/alphabet-serious-flat/svg/011-m.svg';">
+            </li>
+            <li>
+                <img class="logo" src="../resources/svg/alphabet-serious-flat/svg/035-e.svg" onmouseover="this.src='../resources/svg/alphabet-flat/svg/006-e.svg';" onmouseout="this.src='../resources/svg/alphabet-serious-flat/svg/035-e.svg';"> 
+            </li>
+            <li>
+                <img class="logo" src="../resources/svg/alphabet-serious-flat/svg/005-g.svg" onmouseover="this.src='../resources/svg/alphabet-flat/svg/008-g.svg';" onmouseout="this.src='../resources/svg/alphabet-serious-flat/svg/005-g.svg';">
+            </li>
+            <li>
+                <img class="logo" src="../resources/svg/alphabet-serious-flat/svg/001-A.svg" onmouseover="this.src='../resources/svg/alphabet-flat/svg/001-A.svg';" onmouseout="this.src='../resources/svg/alphabet-serious-flat/svg/001-A.svg';">
+            </li>
+        </ul>
+    </div>
+
+    <div class="user">
+        Vali
+    </div>
+
 </body>
 
 </html>
