Updated the Log In/Register Form, added an effect to the homepage

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
              </nav>
         </div>
      </div>
-     <h1>Welcome to Math Equation game!</h1>
-
+      <div id="text"></div>
+      <script type="text/javascript" src="./js/text.js">
+      </script>
 </body>
 </html>
