--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
                             </ul>
                         </div>
                     </li>
-                     <li><a href="#"><i class="fas fa-phone-alt"></i> Contact</a></li>
+                     <li><a href="contact.html"><i class="fas fa-phone-alt"></i> Contact</a></li>
                      <li><a href="login.html"><i class="fas fa-sign-in-alt"></i> Log In</a></li>                       
                  </ul>
              </nav>
