--- a/html/login.html
+++ b/html/login.html
@@ -15,18 +15,18 @@
                 <ul>
                     <li class="active"><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                      <li><a href="#"><i class="fas fa-info"></i> About</a></li>
-                     <li><a href="#"><i class="fas fa-question"></i> Quiz</a></li>
+                     <li><a href="quiz.html"><i class="fas fa-question"></i> Quiz</a></li>
                      <li><a href="#"><i class="fas fa-graduation-cap"></i> Explore</a>
                         <div class="drop-down1">
                             <ul>
                                 <li><a href="algebra.html">Algebra</a></li>
-                                <li><a href="#">Geometry</a></li>
-                                <li><a href="#">Trigonometry</a></li>
-                                <li><a href="#">Calculus</a></li>
+                                <li><a href="geometry.html">Geometry</a></li>
+                                <li><a href="trigonometry.html">Trigonometry</a></li>
+                                <li><a href="calculus.html">Calculus</a></li>
                             </ul>
                         </div>
                     </li>
-                     <li><a href="#"><i class="fas fa-phone-alt"></i> Contact</a></li>
+                     <li><a href="contact.html"><i class="fas fa-phone-alt"></i> Contact</a></li>
                      <li><a href="login.html"><i class="fas fa-sign-in-alt"></i> Log In</a></li>           
                 </ul>
             </nav>
