Added: the about page, forgot pass, and checked on csslint for errors.

--- a/html/index.html
+++ b/html/index.html
@@ -10,12 +10,13 @@
 </head>
 
 <body>
+    
     <div class="container">
          <div class="navbar">
              <nav>
                  <ul>
                      <li class="active"><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                     <li><a href="#"><i class="fas fa-info"></i> About</a></li>
+                     <li><a href="about.html"><i class="fas fa-info"></i> About</a></li>
                      <li><a href="quiz.html"><i class="fas fa-question"></i> Quiz</a></li>
                      <li><a href="#"><i class="fas fa-graduation-cap"></i> Explore</a>
                         <div class="drop-down1">
@@ -33,7 +34,15 @@
              </nav>
         </div>
      </div>
-      <div id="text"></div>
+
+        <section>
+                <div class="leftside">
+                    <img src="../resources/svg/undraw_mathematics_4otb.svg">
+                </div>
+                <div class="rightside">
+                    <div id="text"></div>
+                </div>
+        </section>
       <script type="text/javascript" src="../js/text.js">
       </script>
 </body>
