--- a/html/login.html
+++ b/html/login.html
@@ -16,6 +16,7 @@
                 <h1>Log In</h1>
                 <p>No account? Press <a href="signup.html">Sign Up</a> to become a member!</p>
                 <p>Proceed to the <a href="index.html"> Home</a> page!</p>
+                <p>Forgot the password? Click<a href="#"> here.</a></p>
             </div>
             <div class="box">
                 <form class="form">
