--- a/html/algebra.html
+++ b/html/algebra.html
@@ -12,11 +12,10 @@
 </head>
 <body>
     <div class="container">
-        <a href="index.html"><img class="home" src="../resources/svg/algebra.svg" alt="Home"></a>
-        <div class="containerTitles">
-            <h1>This is fun</h1>
-            <p>This page contains algebra</p>
-        </div>
+        <a href="index.html"><img class="home" src="../resources/svg/calculator.svg" alt="Home"></a>
+        <a href="geometry.html"><img class="home" src="../resources/svg/geometry.svg" alt="Home"></a>
+        <a href="trigonometry.html"><img class="home" src="../resources/svg/trigonometry.svg" alt="Home"></a>
+        <a href="calculus.html"><img class="home" src="../resources/svg/calculus.svg" alt="Home"></a>
     </div>
 
     <div class = "bodyTitles">
@@ -163,7 +162,7 @@
             
             <div class="middle"></div>
 
-            <div class="column">
+            <div class="column" id="column2">
                 <h2>Resources</h2>
                 <a href="https://www.youtube.com/watch?v=YVBFrxipZNU" target="_blank">
                     <p>
