--- a/html/geometry.html
+++ b/html/geometry.html
@@ -5,18 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore</title>
-    <link rel="stylesheet" href="../css/geometry.css">
+    <link rel="stylesheet" href="../css/algebra.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 </head>
 <body>
     <div class="container">
-        <a href="index.html"><img class="home" src="../resources/svg/geometry.svg" alt="Home"></a>
-        <div class="containerTitles">
-            <h1>This is fun</h1>
-            <p>This page contains geometry</p>
-        </div>
+        <a href="index.html"><img class="home" src="../resources/svg/calculator.svg" alt="Home"></a>
+        <a href="algebra.html"><img class="home" src="../resources/svg/algebra.svg" alt="Home"></a>
+        <a href="trigonometry.html"><img class="home" src="../resources/svg/trigonometry.svg" alt="Home"></a>
+        <a href="calculus.html"><img class="home" src="../resources/svg/calculus.svg" alt="Home"></a>
     </div>
 
     <div class = "bodyTitles">
@@ -30,7 +29,9 @@
                 <h2>Formulas</h2>
             </div>
                 
-            <div class="column">
+            <div class="middle"></div>
+
+            <div class="column" id="column2">
                 <h2>Resources</h2>
             </div>
         </div>
