--- a/html/contact.html
+++ b/html/contact.html
@@ -12,8 +12,9 @@
     <div class="container">
         <a href="index.html"><img class="home" src="../resources/svg/contact.svg" alt="Home"></a>
         <div class="containerTitles">
-            <h1>This page is all about us</h1>
-            <p>Juust the three of us</p>
+            <h1>Leave a feedback. Or not. Your choice.</h1>
+            <p>You can complain or congratulate us,</p>
+            <p>or you can just report a bug</p>
         </div>
     </div>
 
