--- a/html/index.html
+++ b/html/index.html
@@ -37,13 +37,13 @@
 
         <section>
                 <div class="leftside">
-                    <img src="../resources/svg/undraw_mathematics_4otb.svg">
+                    <img src="../resources/svg/undraw_mathematics_4otb.svg" alt="logo">
                 </div>
                 <div class="rightside">
                     <div id="text"></div>
                 </div>
         </section>
-      <script type="text/javascript" src="../js/text.js">
+      <script src="../js/text.js">
       </script>
 </body>
 </html>
