--- a/html/quiz.html
+++ b/html/quiz.html
@@ -17,7 +17,6 @@
       rel="stylesheet"
     />
     <script
-      type="text/javascript"
       src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
     ></script>
   </head>
@@ -35,6 +34,7 @@
           <img
             class="logo"
             src="../resources/svg/alphabet-serious-flat/svg/011-m.svg"
+            alt="m"
             onmouseover="this.src='../resources/svg/alphabet-flat/svg/014-m.svg';"
             onmouseout="this.src='../resources/svg/alphabet-serious-flat/svg/011-m.svg';"
           />
@@ -42,6 +42,7 @@
         <li>
           <img
             class="logo"
+            alt="e"
             src="../resources/svg/alphabet-serious-flat/svg/035-e.svg"
             onmouseover="this.src='../resources/svg/alphabet-flat/svg/006-e.svg';"
             onmouseout="this.src='../resources/svg/alphabet-serious-flat/svg/035-e.svg';"
@@ -50,6 +51,7 @@
         <li>
           <img
             class="logo"
+            alt="g"
             src="../resources/svg/alphabet-serious-flat/svg/005-g.svg"
             onmouseover="this.src='../resources/svg/alphabet-flat/svg/008-g.svg';"
             onmouseout="this.src='../resources/svg/alphabet-serious-flat/svg/005-g.svg';"
@@ -58,6 +60,7 @@
         <li>
           <img
             class="logo"
+            alt="a"
             src="../resources/svg/alphabet-serious-flat/svg/001-A.svg"
             onmouseover="this.src='../resources/svg/alphabet-flat/svg/001-A.svg';"
             onmouseout="this.src='../resources/svg/alphabet-serious-flat/svg/001-A.svg';"
