--- a/html/signup.html
+++ b/html/signup.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>MEGa</title>
     <link rel="shortcut icon" type="image/png" href="img/MEGa.svg">
-    <link rel="stylesheet" href="../css/signup.css">
+    <link rel="stylesheet" href="./css/signup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
