adaugare buton catre profil in bara de sus

--- a/html/about.html
+++ b/html/about.html
@@ -27,6 +27,7 @@
                        </li>
                         <li><a href="contact.html"><i class="fas fa-phone-alt"></i> Contact</a></li>
                         <li><a href="login.html"><i class="fas fa-sign-in-alt"></i> Log In</a></li>                       
+                        <li><a href="profile.html"><i class="fas fa-profile-alt"></i> Profile </a></li>                       
                     </ul>
                 </nav>
            </div>
